bootstrap/tests/ir/snapshots/integration__ir__lir__snapshot_lir_basic.snap
---
source: tests/ir/lir.rs
expression: lir
---
LirProgram {
    functions: [
        LirFunction {
            name: "main",
            params: [],
            ret_type: Unit,
            requires: Row(
                [],
                None,
            ),
            throws: Row(
                [],
                None,
            ),
            body: [
                Let {
                    name: "x",
                    typ: I64,
                    expr: Atom(
                        Int(
                            42,
                        ),
                    ),
                },
            ],
            ret: Unit,
            span: 0..52,
            source_file: None,
            source_line: None,
        },
    ],
    externals: [],
}
